@@ -7,6 +7,7 @@ swi-prolog (5.6.58-1) unstable; urgency=low
       5.6.49-1).
   * Fix typo ("polution" -> "pollution") in README.Debian.
   * Replace calls to `pwd` in debian/rules with $(CURDIR).
+  * Move from dh_movefiles to dh_install.
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Tue, 22 Jul 2008 21:34:25 +0100
 
